# assignment

./: .gitignore  AI_GUIDANCE.md  README.md  assignment.html  feedback.html  index.html
DOCS/: AGENTS.md  AI-VISIBILITY-LOGIC.md  DESIGN.md  TECHNICAL-BLOG.md  WALKTHROUGH.md
backend/: app.py  models.py  pyproject.toml  requirements.txt  routes.py  services.py
backend/tests/: test_api.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CTA.tsx  Features.tsx  Footer.tsx  Hero.test.tsx  Hero.tsx  HistoryModal.tsx  Navbar.tsx  Partners.tsx  Problem.tsx  Solution.tsx
